--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -2,7 +2,7 @@
 
 /*************************************************************************************************/
 /* overrides to revert personas. see http://code.google.com/p/fbug/issues/detail?id=2704 */
-
+/* TODO is this still needed ? /
 #fbContentBox:-moz-lwtheme {
   background-color: -moz-dialog;
   color: -moz-dialogtext;
