[1.10] Use SourceEditor (Orion) for mutliline command line (Command editor)
http://code.google.com/p/fbug/source/detail?r=12844

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -50,8 +50,9 @@ window[chromehidden~="toolbar"] #fbToolbar {
 /*************************************************************************************************/
 /* FirebugOverlay.xul */
 
-#fbCommandEditor {
-    -moz-binding: url("firefox/bindings.xml#commandEditor");
+#fbCommandEditor > textbox {
+    padding: 0;
+    margin: 0;
 }
 
 .fbCommandLineCompletionPanel {
