--- a/extension/skin/classic/win/firebug.css
+++ b/extension/skin/classic/win/firebug.css
@@ -159,9 +159,9 @@
 #fbCommandEditor {
     -moz-appearance: none;
     border: none;
-    border-top: 1px solid;
+    /*border-top: 1px solid;*/
     -moz-border-top-colors: threedshadow;
-    padding: 2px 0 0 2px;
+    /*padding: 2px 0 0 2px;*/
 }
 
 #fbCommandToolbar {
