[1.10][&1.9] Case sensitivity label must be white under Mac OS
http://code.google.com/p/fbug/source/detail?r=12865

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -77,6 +77,7 @@
     margin-bottom: 2px;
     margin-right: -12px;
     -moz-border-image: url(chrome://firebug/skin/mac/search-panel.png) 16 50 24 12 / 16px 50px 24px 12px repeat;
+    color: #ffffff;
 }
 
 #fbSearchOptionsPanel[position="after_end"] {
