--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -76,16 +76,20 @@
     background-color: transparent;
     margin-bottom: 2px;
     margin-right: -12px;
-    -moz-border-image: url(chrome://firebug/skin/mac/search-panel.png) 16 50 24 12 / 16px 50px 24px 12px repeat;
+    -moz-border-image: url(chrome://firebug/skin/mac/search-panel.png) 16 50 24 12 stretch;
+    -moz-border-image-slice: 16 50 24 12 fill;
+    border-width: 16px 50px 24px 12px;
     color: #ffffff;
 }
 
 #fbSearchOptionsPanel[position="after_end"] {
-    -moz-border-image: url(chrome://firebug/skin/mac/search-panel-down.png) 25 50 18 12 / 25px 50px 18px 12px repeat;
+    -moz-border-image: url(chrome://firebug/skin/mac/search-panel-down.png) 25 50 18 12 stretch;
+    -moz-border-image-slice: 25 50 18 12 fill;
+    border-width: 25px 50px 18px 12px;
 }
 
 #fbSearchOptionsPanel > vbox {
-  margin-right: -38px;
+    margin-right: -38px;
 }
 
 .fbsearch-options-label {
