[1.10][&1.9?] Issue 5225: Half-rendered panel shown off-place when clicking magnifier in search field
http://code.google.com/p/fbug/source/detail?r=12878

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -79,6 +79,7 @@
     -moz-border-image: url(chrome://firebug/skin/mac/search-panel.png) 16 50 24 12 stretch;
     -moz-border-image-slice: 16 50 24 12 fill;
     border-width: 16px 50px 24px 12px;
+    border-style: solid;
     color: #ffffff;
 }
 
