--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -50,6 +50,10 @@ window[chromehidden~="toolbar"] #fbToolbar {
 /*************************************************************************************************/
 /* FirebugOverlay.xul */
 
+textbox#fbCommandEditor {
+    -moz-binding: url("firefox/bindings.xml#commandEditor");
+}
+
 #fbCommandEditor > textbox {
     padding: 0;
     margin: 0;
