[1.10][&1.9?] Issue 5275 (Don't use obsolete prefixed CSS) http://code.google.com/p/fbug/issues/detail?id=5275
http://code.google.com/p/fbug/source/detail?r=12916

--- a/extension/content/firebug/html/highlighter.css
+++ b/extension/content/firebug/html/highlighter.css
@@ -16,8 +16,8 @@
     position: fixed !important;
     -moz-transform: rotate(0deg) !important;
     -moz-transform-origin: 50% 50% !important;
-    -moz-border-radius: 0 !important;
-    -moz-box-shadow: none !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
     background: transparent none !important;
     pointer-events: none !important;
 }
