--- a/extension/skin/classic/win/firebug.css
+++ b/extension/skin/classic/win/firebug.css
@@ -328,13 +328,13 @@ panelBarTabList > .fb-tabs-alltabs-button {
 #fbPanelBar1-tabBox > panelBarArrowscrollbox > .scrollbutton-up
 {
     border-left: 1px solid ThreeDShadow !important;
-    -moz-border-radius-topleft: 2px !important;
+    border-top-left-radius: 2px !important;
 }
 
 #fbPanelBar1-tabBox > panelBarArrowscrollbox > .scrollbutton-down
 {
     border-right: 1px solid ThreeDShadow !important;
-    -moz-border-radius-topright: 2px !important;
+    border-top-right-radius: 2px !important;
 }
 
 #fbPanelBar1-tabBox > panelBarArrowscrollbox {
@@ -345,7 +345,7 @@ panelBarTabList > .fb-tabs-alltabs-button {
 #fbPanelBar2-tabBox > panelBarArrowscrollbox > .scrollbutton-down,
 #fbPanelBar2-tabBox > panelBarTabList > .fb-tabs-alltabs-button {
     border-top: none !important;
-    -moz-border-radius: 0px !important;
+    border-radius: 0px !important;
 }
 
 #fbPanelBar1-buttons {
@@ -364,7 +364,7 @@ panelBarTabList > .fb-tabs-alltabs-button {
     padding-right: 0;
 
     border-right: 1px solid ThreeDShadow !important;
-    -moz-border-radius-topright: 2px !important;
+    border-top-right-radius: 2px !important;
 }
 
 .fb-tabs-alltabs-button > .toolbarbutton-text {
@@ -401,32 +401,32 @@ panelBarArrowscrollbox > .scrollbutton-down:not([disabled="true"]):hover,
 
 panelBarArrowscrollbox > .scrollbutton-up[disabled="true"],
 panelBarArrowscrollbox > .scrollbutton-down[disabled="true"] {
-    opacity: .4;
+    opacity: 0.4;
 }
 
 panelBarArrowscrollbox > .scrollbutton-up {
     border-left-style: none;
-    -moz-border-radius-topright: 2px;
+    border-top-right-radius: 2px;
 }
 
 panelBarArrowscrollbox > .scrollbutton-up:-moz-locale-dir(rtl) {
     border-left-style: solid;
     border-right-style: none;
-    -moz-border-radius-topleft: 2px;
-    -moz-border-radius-topright: 0px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 0px;
 }
 
 panelBarArrowscrollbox > .scrollbutton-down,
 .fb-tabs-alltabs-button {
     border-right-style: none;
-    -moz-border-radius-topleft: 2px;
+    border-top-left-radius: 2px;
 }
 
 panelBarArrowscrollbox > .scrollbutton-down:-moz-locale-dir(rtl) {
     border-left-style: none;
     border-right-style: solid;
-    -moz-border-radius-topleft: 0px;
-    -moz-border-radius-topright: 2px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 2px;
 }
 
 .fb-tabs-alltabs-button > .toolbarbutton-text,
