[1.10] Issue 3155: Editing breakpoint conditions should have auto-completion
http://code.google.com/p/fbug/source/detail?r=12931

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -157,6 +157,10 @@
     font-size: inherit;
 }
 
+.conditionInput.completionInput {
+    position: relative;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .upsideDown {
