Issue 2495 (The rendered font should be highlighted in Style side panel) http://code.google.com/p/fbug/issues/detail?id=2495

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -37,11 +37,15 @@
 }
 
 .cssPropName {
-    color: DarkGreen;
+    color: darkgreen;
 }
 
-.cssPropValue {
-    color: DarkBlue;
+.cssPropValue, .cssFontPropValue {
+    color: darkblue;
+}
+
+.cssFontPropBefore, .cssFontPropAfter {
+    color: #787878;
 }
 
 .cssOverridden > .cssPropName,
