Better approach for issue 5420. Now multiple fonts can be marked as used when an element uses different fonts for the texts in it.

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -44,7 +44,7 @@
     color: darkblue;
 }
 
-.cssFontPropBefore, .cssFontPropAfter {
+.cssPropValueUnused, .cssFontPropSeparator {
     color: #787878;
 }
 
