--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -108,12 +108,12 @@
 
 .cssProp.disabledStyle {
     background: transparent url(chrome://firebug/skin/disableHover.png) no-repeat 2px 1px;
-    opacity: 1;
     color: #CCCCCC;
 }
 
 .cssProp.disabledStyle > .cssPropName,
-.cssProp.disabledStyle > .cssPropValue {
+.cssProp.disabledStyle > .cssPropValue,
+.cssProp.disabledStyle > .cssPropValue span {
     color: inherit;
 }
 
