Made the line for time stamps a bit more yellow to better distinguish it from MozAfterPaint event lines

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -365,7 +365,7 @@
 }
 
 .netContentLoadBar {
-    background-color: Blue;
+    background-color: blue;
 }
 
 .netPaintBar {
@@ -373,7 +373,7 @@
 }
 
 .netTimeStampBar {
-    background-color: Olive;
+    background-color: #A0A000;
 }
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
