--- a/extension/skin/classic/win/panel.css
+++ b/extension/skin/classic/win/panel.css
@@ -12,7 +12,8 @@
 .hasHeaders .netHrefLabel,
 .objectBox-stackFrame.hasTwisty,
 .netPageRow > .netCol > .netPageTitle,
-.cssComputedHeader > .twisty {
+.cssComputedHeader > .twisty,
+.computedStyle.hasSelectors > .stylePropName {
     background-image: url(chrome://firebug/skin/win/twistyClosed.png);
     background-repeat: no-repeat;
     background-position: 2px 2px;
@@ -29,7 +30,8 @@
 .netRow.opened > .netCol > .netHrefLabel,
 .netPageRow.opened > .netCol > .netPageTitle,
 .objectBox-stackFrame.hasTwisty.opened,
-.computedStylesGroup.opened > .cssComputedHeader > .twisty {
+.computedStylesGroup.opened > .cssComputedHeader > .twisty,
+.computedStyle.hasSelectors.opened > .stylePropName {
     background-image: url(chrome://firebug/skin/win/twistyOpen.png);
 }
 
