--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -23,6 +23,10 @@
     position: relative;
 }
 
+.cssElementRuleContainer > .objectLink {
+    -moz-user-select: none;
+}
+
 .cssHead {
     padding-right: 150px;
 }
@@ -74,6 +78,7 @@
 
 .cssInheritHeader, .cssComputedHeader {
     position: relative;
+    -moz-user-select: none;
 }
 
 .cssComputedHeader,
