Replaced PNG icons by SVG icons in preparation for a better resized display

--- a/extension/content/firebug/firefox/browserOverlay.css
+++ b/extension/content/firebug/firefox/browserOverlay.css
@@ -104,7 +104,7 @@
 }
 
 #fbStatusBar[showErrors] #fbStatusIcon {
-    list-style-image: url(chrome://firebug/skin/errorIcon.png);
+    list-style-image: url(chrome://firebug/skin/error.svg);
 }
 
 #fbStatusIcon {
