--- a/extension/skin/classic/orion-firebug.css
+++ b/extension/skin/classic/orion-firebug.css
@@ -3,22 +3,27 @@
 /************************************************************************************************/
 /* The Default Mozilla Orion Theme */
 
-@import "chrome://browser/skin/devtools/orion.css";
+/* From some reason, importing the default theme this way causes issue 5488 */
+/*@import "chrome://browser/skin/devtools/orion.css";*/
 
 /************************************************************************************************/
 /* Custom Styles for Command Editor (Orion) */
 
+.viewContainer {
+    font-size: 11px;
+}
+
 .view {
-  background: white;
+    background: white;
 }
 
 .token_string {
-  color: red;
-  font-style: normal;
+    color: red;
+    font-style: normal;
 }
 
 .token_keyword {
-  color: blue;
+    color: blue;
 }
 
 /************************************************************************************************/
