--- a/extension/skin/classic/orion-firebug.css
+++ b/extension/skin/classic/orion-firebug.css
@@ -4,7 +4,7 @@
 /* The Default Mozilla Orion Theme */
 
 /* From some reason, importing the default theme this way causes issue 5488 */
-/*@import "chrome://browser/skin/devtools/orion.css";*/
+@import "chrome://browser/skin/devtools/orion.css";
 
 /************************************************************************************************/
 /* Custom Styles for Command Editor (Orion) */
