Issue 4889 (Folding for breakpoint categories) http://code.google.com/p/fbug/issues/detail?id=4889

--- a/extension/skin/classic/breakpoint.css
+++ b/extension/skin/classic/breakpoint.css
@@ -1,5 +1,27 @@
 /* See license.txt for terms of usage */
 
+.breakpointHeader {
+    position: relative;
+    cursor: pointer;
+    -moz-user-select: none;
+}
+
+.breakpointHeader > .twisty {
+    background-position: 4px 4px !important;
+}
+
+.breakpointsHeaderLabel {
+    margin-left: 14px;
+} 
+
+.breakpointBlock > .breakpointsGroupListBox {
+    display: none;
+}
+
+.breakpointBlock.opened > .breakpointsGroupListBox {
+    display: block;
+}
+
 /************************************************************************************************/
 /* Breakpoint notifications */
 
