Fix image on disabled Cookies panel

--- a/extension/skin/classic/cookies/cookies.css
+++ b/extension/skin/classic/cookies/cookies.css
@@ -449,7 +449,7 @@
 /************************************************************************************************/
 
 .disabledPanelBox .descImage-cookies {
-    background-image: url(activation-menu-cookies.png);
+    background-image: url(chrome://firebug/skin/cookies/activation-menu-cookies.png);
 }
 
 /************************************************************************************************/
