Issue 5573: 	When a response comes from the cache, the headers are shown twice

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -431,6 +431,10 @@
     color: gray;
 }
 
+.netInfoResponseHeadersBody .headerFromBFCache {
+    color: gray;
+}
+
 /************************************************************************************************/
 /* Time Info tip */
 
