Issue 5416: Auto-completion for Command Line API
http://code.google.com/p/fbug/issues/detail?id=5416

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -77,6 +77,10 @@ textbox#fbCommandEditor {
     color: #666666;
 }
 
+.completionLine.apiCompletion {
+    font-style: italic;
+}
+
 .completionText {
     color: #666666;
     margin-right: 1px;
