Display log hints differently (related to issue 5615)

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -155,7 +155,8 @@
 }
 
 .objectBox-null,
-.objectBox-undefined {
+.objectBox-undefined,
+.logRowHint {
     font-style: italic;
     color: #787878;
 }
